--- a/99Problems.cabal
+++ b/99Problems.cabal
@@ -15,17 +15,17 @@ build-type:          Simple
 extra-source-files:  CHANGELOG.md
 cabal-version:       >=1.10
 
-library
-  -- exposed-modules:
-  -- other-modules:
-  -- other-extensions:
-  build-depends:       base >=4.12 && <4.13
-  hs-source-dirs:      src
-  default-language:    Haskell2010
+-- library
+--   -- exposed-modules:
+--   -- other-modules:
+--   -- other-extensions:
+--   build-depends:       base >=4.12 && <4.13
+--   hs-source-dirs:      src
+--   default-language:    Haskell2010
 
 executable 99Problems
   main-is:             Main.hs
-  -- other-modules:
+  other-modules:       Problems1To10
   -- other-extensions:
   build-depends:       base >=4.12 && <4.13
   hs-source-dirs:      src
